--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link rel = "icon" href =  "https://img.icons8.com/ios/50/000000/timer.png" type = "image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://nathanael-bonamie.github.io/admin_cntdwn/script.js"></script>
+	<link rel="stylesheet" href="https://nathanael-bonamie.github.io/admin_cntdwn/style.css"/>
   <meta charset="UTF-8">
 </head>
   
