--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
   <br>
   <input type='button' id='but' onclick="settings('44 heures')" value='44h'>
   <br>
-  <input type='button' id='but' onclick="setDate('En congés')" value='En congés'>
+  <input type='button' id='but' onclick="setDate('En congés')" value='Vacances'>
   <br>
   <input type='button' id='but' onclick="setDate('Chômage partiel')" value='Chômage'>
+  <br>
+  <input type='button' id='but' onclick="setDate('Rtt')" value='Congé/Rtt'>
   <br>
   <p class="sanssautdeligne" id="demo"></p>
   </div>
