--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <br>
   <input type='button' id='but' onclick="setDate('Chômage partiel')" value='Chômage'>
   <br>
-  <input type='button' id='but' onclick="setDate('Rtt')" value='Congé/Rtt'>
+  <input type='button' id='but' onclick="settings('Congé/Rtt')" value='Congé/Rtt'>
   <br>
   <p class="sanssautdeligne" id="demo"></p>
   </div>
